# image_analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  entities.py
src/analyzer/: analyzer.py
src/core/: analysis.py  io.py  processing.py  visualization.py
src/database/: __init__.py  sqlite.py
src/models/: __init__.py  image.py  source.py  sources.py  transformation.py
src/storage/: json_storage.py
tests/: conftest.py  test_db.py  test_io.py  test_processing.py
