[tool.poetry]
name = "image-analyzer"
version = "1.0.0"
description = ""
authors = ["Logunova Anastasiia"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.11"
Pillow = "9.0.0"
numpy = "1.24"
matplotlib = "3.6"

[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
ruff = "0.1.0"
mypy = "1.0.0"
pre-commit = "3.0.0"
pytest = "8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "N", "C4", "SIM"]
fixable = ["ALL"]
unfixable = []

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

